新增view事件分发 案例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity
             android:name=".ui.AppBarActivity" />
-
+        <activity android:name=".ui.TouchActivity"/>
     </application>
 
 </manifest>
